--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,10 @@ doctype html
 html
   head
     title= title
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css")
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,500i,700")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    footer.container
+      p Made by #[a.a(href="https://github.com/inambe" target="_blank") Inambe]
