--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,130 @@
+/*
+*
+  resets
+*
+*/
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: "Ubuntu", sans-serif;
+  background: #ff4f4f;
+  color: #fbfbfb;
+}
+button,
+a {
+  color: inherit;
+}
+a {
+  text-decoration: none;
+  display: inline-block;
+}
+h1,
+h2,
+h3 {
+  margin: 0;
 }
 
-a {
-  color: #00B7FF;
+/*
+*
+  components
+*
+*/
+
+/* hero */
+.hero {
+  border-radius: 5px;
+  transform: rotate(2deg);
+  background: #4c4c4c;
+  display: inline-block;
+  padding: 2rem 3rem;
+  transition: transform 0.3s;
+}
+.hero:hover {
+  transform: rotate(-3deg);
+}
+.hero__title {
+  color: #ff8c41;
+  font-size: 2rem;
+  margin-bottom: 0.6rem;
+}
+.hero__tagline {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+/* main-header */
+.main-header {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+/* main-content */
+.main-content {
+  margin-bottom: 2rem;
+}
+
+/* container */
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+/* form-c */
+.form-c {
+  margin-bottom: 1.5rem;
+}
+.form-c--fancy {
+  border-left: 3px solid;
+  padding: 1rem;
+}
+.form-c label {
+  display: block;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+
+/* btn */
+.btn {
+  padding: 0.5rem 1rem;
+  outline: none;
+  border: 0;
+  cursor: pointer;
+}
+.btn--primary {
+  border-radius: 5px;
+  background: #ff8c41;
+  box-shadow: 2px 2px 1px 1px black;
+  transition: box-shadow 0.3s;
+}
+.btn--primary:hover {
+  box-shadow: 1px 1px 1px 1px #ff4f4f;
+}
+
+/* error */
+.error {
+  padding: 1rem 0;
+}
+.error__image {
+  height: 200px;
+  width: auto;
+}
+.error__title {
+  margin: 1rem 0;
+}
+
+/* a */
+.a {
+  text-decoration: underline;
+}
+
+/*
+*
+  utils
+*
+*/
+.mb-big {
+  margin-bottom: 2rem;
+}
+.mb-normal {
+  margin-bottom: 1rem;
 }
