--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,9 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  main.main-content
+    .container
+      .error
+        img.error__image(src="https://media.giphy.com/media/80TEu4wOBdPLG/giphy.gif")
+        h1.error__title= message
+      a.btn.btn--primary(href="/") Home
