--- a/views/index.pug
+++ b/views/index.pug
@@ -13,4 +13,4 @@ block content
           label(for="file") Select File
           input#file(type="file", name="file")
         .form-c
-          button.btn.btn--primary(type="submit") Download
+          button.btn.btn--primary(type="submit") Corrupt & Download
