--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,5 +7,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
-    footer.container
-      p Made by #[a.a(href="https://github.com/inambe" target="_blank") Inambe]
+    footer
+        p.container Made by #[a.a(href="https://github.com/inambe" target="_blank") Inam Ul Huq]
+    script.
+        document.querySelector("form").reset()
