--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,7 @@ html
   body
     block content
     footer
-        p.container Made by #[a.a(href="https://github.com/inambe" target="_blank") Inam Ul Huq]
+        .container
+            p Made by #[a.a(href="https://github.com/inambe" target="_blank") Inam Ul Huq]
     script.
         document.querySelector("form").reset()
