--- a/views/error.pug
+++ b/views/error.pug
@@ -5,5 +5,5 @@ block content
     .container
       .error
         img.error__image(src="https://media.giphy.com/media/80TEu4wOBdPLG/giphy.gif")
-        h1.error__title= message
-      a.btn.btn--primary(href="/") Home
+        h2.error__title Error: #{message}
+        a.btn.btn--primary(href="/") Home
