--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -145,3 +145,12 @@ form {
 .mb-normal {
 	margin-bottom: 1rem;
 }
+
+@media only screen and (max-width: 600px) {
+	.hero {
+		width: 50%;
+	}
+	form {
+		width: 70%;
+	}
+}
